traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: not found: value fin
  fin=false
  ^Snake:9: error: not found: value True
  if(getDirection()==Direction.EST && estFaceMur()==True){
                                                    ^Snake:12: error: not found: value fin
      fin=true
      ^Snake:16: error: not found: value fin
  return fin
         ^